RESOLVED FIXED277846
[JSC] Do not use gcSafeMemcpy etc. when it is not necessary
https://bugs.webkit.org/show_bug.cgi?id=277846
Summary [JSC] Do not use gcSafeMemcpy etc. when it is not necessary
Yusuke Suzuki
Reported 2024-08-08 22:20:55 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-08 22:21:07 PDT
Yusuke Suzuki
Comment 2 2024-08-08 22:23:21 PDT
EWS
Comment 3 2024-08-09 09:54:31 PDT
Committed 282051@main (e66d49b789e7): <https://commits.webkit.org/282051@main> Reviewed commits have been landed. Closing PR #31941 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.